fix overflow de body

--- a/css/base.scss
+++ b/css/base.scss
@@ -13,6 +13,10 @@ $font-family-sans-serif:  "Gotham", "Helvetica Neue", Helvetica, Arial, sans-ser
 
 #map { position:absolute; top:0; bottom:0; width:100%; }
 
+body{
+  overflow: hidden;
+}
+
 .header-gcba {
   height:50px;
   padding:10px 0;
